--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,1 +1,11 @@
+SERVER_PORT=
 MONGO_URI=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL=
+SESSION_SECRET=
+
+MAIL_USER=
+MAIL_PASS=
+MAIL_SERVICE=
