--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,10 +1,13 @@
+CLIENT_URL=
 SERVER_PORT=
+
+SESION_NAME=
+SESSION_SECRET=
 MONGO_URI=
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=
-SESSION_SECRET=
 
 MAIL_USER=
 MAIL_PASS=
