--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
     "name": "client",
     "version": "0.1.0",
+    "proxy": "http://localhost:8080",
     "private": true,
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.5",
