--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
         "nodemon": "^2.0.22",
         "passport": "^0.6.0",
         "passport-google-oauth20": "^2.0.0",
-        "passport-local": "^1.0.0"
+        "passport-local": "^1.0.0",
+        "twitter-api-v2": "^1.15.0"
     }
 }
