--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
         "mongodb": "^5.6.0",
         "mongoose": "^7.3.1",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.3",
         "nodemon": "^2.0.22",
         "passport": "^0.6.0",
