upgrade docker files

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,11 +3,16 @@ FROM node:18-alpine
 WORKDIR /app
 
 COPY package*.json ./
-COPY ./src ./src
-COPY ./public ./public
 
 RUN npm install --silent
 
-EXPOSE 3000
+COPY . .
+
+ARG API_URL
+ENV REACT_APP_API_URL=$API_URL
+
+ARG DOCKER_PORT
+
+EXPOSE $DOCKER_PORT
 
 CMD [ "npm", "start" ] 
