--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.4.0",
+        "classnames": "^2.3.2",
         "react": "^18.2.0",
+        "react-circular-progressbar": "^2.1.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.10.1",
         "react-redux": "^8.1.1",
