--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# client
+/client/node_modules
+
+# server
+/server/node_modules
+/server/uploads
+
 # dependencies
 /node_modules
 /.pnp
@@ -13,6 +20,7 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
