--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
     "name": "client",
-    "version": "0.1.0",
+    "version": "1.0.0",
     "proxy": "http://localhost:8080",
     "private": true,
     "dependencies": {
@@ -17,6 +17,7 @@
         "react-redux": "^8.1.1",
         "react-router-dom": "^6.14.0",
         "react-scripts": "5.0.1",
+        "react-virtualized": "^9.22.5",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
