update docker files

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,5 +1,10 @@
 FROM node:18-alpine
 
+ARG SERVER_ORIGIN
+ARG DOCKER_PORT
+
+ENV REACT_APP_API_URL=$SERVER_ORIGIN
+
 WORKDIR /app
 
 COPY package*.json ./
@@ -7,11 +12,6 @@ COPY package*.json ./
 RUN npm install --silent
 
 COPY . .
-
-ARG API_URL
-ENV REACT_APP_API_URL=$API_URL
-
-ARG DOCKER_PORT
 
 EXPOSE $DOCKER_PORT
 
