--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,18 +1,11 @@
 FROM node:18-alpine
 
-ARG DOCKER_PORT
-
-# Create App Directory
 WORKDIR /app
 
-# Install Dependencies
 COPY package*.json ./
 
 RUN npm install --silent
 
-# Copy app source code
 COPY . .
 
-EXPOSE $DOCKER_PORT
-
-CMD [ "npm", "start" ]
+CMD [ "npm", "run", "dev" ]
