--- a/server/Dockerfile.prod
+++ b/server/Dockerfile.prod
@@ -1,15 +1,13 @@
 FROM node:18-alpine
 
-ARG SERVER_ORIGIN
-
-ENV REACT_APP_API_URL=$SERVER_ORIGIN
-
 WORKDIR /app
 
 COPY package*.json ./
 
 RUN npm install --silent
 
+ENV PATH /app/node_modules/.bin:$PATH
+
 COPY . .
 
-CMD [ "npm", "start" ] 
+CMD [ "npm", "run", "prod" ]
