--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon index.js"
+        "dev": "NODE_ENV=development nodemon index.js",
+        "prod": "NODE_ENV=production node index.js"
     },
     "keywords": [],
     "author": "",
@@ -27,7 +28,6 @@
         "nodemon": "^2.0.22",
         "passport": "^0.6.0",
         "passport-google-oauth20": "^2.0.0",
-        "passport-local": "^1.0.0",
-        "twitter-api-v2": "^1.15.0"
+        "passport-local": "^1.0.0"
     }
 }
