--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,14 +1,15 @@
 FROM node:18-alpine
 
-ARG SERVER_ORIGIN
+ARG API_URL 
 
-ENV REACT_APP_API_URL=$SERVER_ORIGIN
+ENV REACT_APP_API_URL=$API_URL
 
 WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm install --silent
+# RUN npm install --silent
+RUN npm install 
 
 COPY . .
 
