--- a/client/package.json
+++ b/client/package.json
@@ -1,23 +1,25 @@
 {
     "name": "client",
     "version": "1.0.0",
-    "proxy": "http://localhost:8080",
     "private": true,
     "dependencies": {
         "@reduxjs/toolkit": "^1.9.5",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
-        "axios": "^1.4.0",
         "classnames": "^2.3.2",
+        "lodash.debounce": "^4.0.8",
         "react": "^18.2.0",
         "react-circular-progressbar": "^2.1.0",
         "react-dom": "^18.2.0",
+        "react-hot-toast": "^2.4.1",
         "react-icons": "^4.10.1",
         "react-redux": "^8.1.1",
         "react-router-dom": "^6.14.0",
         "react-scripts": "5.0.1",
-        "react-virtualized": "^9.22.5",
+        "react-window": "^1.8.10",
+        "react-window-infinite-loader": "^1.0.9",
+        "socket.io-client": "^4.7.2",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
@@ -43,5 +45,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
     }
 }
