--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,6 @@
+
+# Production
+
 MONGO_URI=
 
 SERVER_URL=
@@ -7,6 +10,30 @@ SERVER_DOCKER_PORT=
 CLIENT_ORIGIN=
 CLIENT_LOCAL_PORT=
 CLIENT_DOCKER_PORT=
+
+SESSION_NAME=
+SESSION_SECRET=
+
+MAIL_USER=
+MAIL_PASS=
+MAIL_SERVICE=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL=
+
+# Development
+
+NGINX_HOSTNAME=
+LETSENCRYPT_EMAIL=
+
+CLIENT_PORT=
+CLIENT_ORIGIN=
+
+API_PORT=
+API_URL=
+
+MONGO_URI=
 
 SESSION_NAME=
 SESSION_SECRET=
