--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,4 @@
-
-# Production
+# .env.development
 
 MONGO_URI=
 
@@ -22,7 +21,7 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=
 
-# Development
+# .env.production
 
 NGINX_HOSTNAME=
 LETSENCRYPT_EMAIL=
