update docker files

--- a/.env.sample
+++ b/.env.sample
@@ -32,6 +32,10 @@ CLIENT_ORIGIN=
 API_PORT=
 API_URL=
 
+
+MONGO_USERNAME=
+MONGO_PASSWORD=
+MONGO_DATABASE=
 MONGO_URI=
 
 SESSION_NAME=
@@ -43,4 +47,4 @@ MAIL_SERVICE=
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-GOOGLE_CALLBACK_URL=
+GOOGLE_CALLBACK_URL=$API_URL
