--- a/docker/production/docker-compose.yml
+++ b/docker/production/docker-compose.yml
@@ -6,10 +6,10 @@ services:
         image: xclone-backend
         restart: unless-stopped
         build:
-            context: server
+            context: ../../server
             dockerfile: Dockerfile.prod
         env_file:
-            - .env.production
+            - .env
         environment:
             - VIRTUAL_HOST=$NGINX_HOSTNAME
             - VIRTUAL_PORT=$API_PORT
@@ -27,13 +27,13 @@ services:
         container_name: frontend
         image: xclone-frontend
         build:
-            context: client
+            context: ../../client
             dockerfile: Dockerfile.prod
             args:
                 - API_URL=$API_URL
         restart: unless-stopped
         env_file:
-            - .env.production
+            - .env
         environment:
             - VIRTUAL_HOST=$NGINX_HOSTNAME
             - VIRTUAL_PORT=$CLIENT_PORT
