--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,10 @@
         "crypto": "^1.0.1",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "express-mongo-sanitize": "^2.2.0",
+        "express-rate-limit": "^7.1.5",
         "express-session": "^1.17.3",
+        "helmet": "^7.1.0",
         "mongodb": "^5.6.0",
         "mongoose": "^7.3.1",
         "morgan": "^1.10.0",
@@ -28,6 +31,9 @@
         "nodemon": "^2.0.22",
         "passport": "^0.6.0",
         "passport-google-oauth20": "^2.0.0",
-        "passport-local": "^1.0.0"
+        "passport-local": "^1.0.0",
+        "socket.io": "^4.7.2",
+        "uuid": "^9.0.1",
+        "winston": "^3.11.0"
     }
 }
