--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@reduxjs/toolkit": "^1.9.5",
+        "@tanstack/react-virtual": "^3.1.1",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -13,18 +14,24 @@
         "react": "^18.2.0",
         "react-circular-progressbar": "^2.1.0",
         "react-dom": "^18.2.0",
+        "react-helmet": "^6.1.0",
         "react-hot-toast": "^2.4.1",
         "react-icons": "^4.10.1",
+        "react-lazy-load-image-component": "^1.6.0",
         "react-redux": "^8.1.1",
         "react-router-dom": "^6.14.0",
         "react-scripts": "5.0.1",
+        "react-tiny-popover": "^8.0.4",
+        "react-tooltip": "^5.25.2",
+        "react-virtualized": "^9.22.5",
+        "react-virtualized-auto-sizer": "^1.0.22",
         "react-window": "^1.8.10",
         "react-window-infinite-loader": "^1.0.9",
         "socket.io-client": "^4.7.2",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "react-scripts start --host 0.0.0.0",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
