--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
         "express-rate-limit": "^7.1.5",
         "express-session": "^1.17.3",
         "helmet": "^7.1.0",
+        "image-size": "^1.1.1",
         "mongodb": "^5.6.0",
         "mongoose": "^7.3.1",
         "morgan": "^1.10.0",
